--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
 	implementation 'com.auth0:java-jwt:4.4.0'
 	implementation 'org.apache.commons:commons-lang3:3.12.0'
 	implementation 'net.sf.jasperreports:jasperreports:6.20.4'
